<resources>
    <string name="app_name">Mediconnect</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="medical_history">Medical History</string>
    <string name="profile">Profile</string>
    <string name="hello_user_name">Hello, [User Name] 👋</string>
    <string name="search_text">Find local doctors who take care of your health</string>
    <string name="top_searched_specialties">Top searched specialties</string>
    <string name="available_doctors_text">Book an appointment with our available doctors</string>
    <string name="doctor_name">Doctor Rezwana Afrin</string>
    <string name="speacialty_text">MBBS, DO (Health)</string>
    <string name="book_appointment_text">Book Appointment</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="doctor_score">4.5</string>
    <string name="about_text">About the doctor</string>
    <string name="about_description">Dr. Rezwana Afrin was born in 1978 in Karachi, Pakistan. She completed her undergraduate studies at Karachi University and earned her medical degree...</string>
    <string name="read_more_link">Read More</string>
    <string name="choose_date__time"><![CDATA[Choose Date & Time]]></string>
    <string name="calendar_icon_desc">Calendar Icon</string>
    <string name="next_text">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dentist">Dentist</string>
    <string name="ophthalmologists">Optometrist</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="gastroenterologist">Gastroenterologist</string>
    <string name="appointment_check_in">Appointment Check In</string>
    <string name="pre_appointment_form">Pre-Appointment Form</string>
    <string name="date_slot_thu_8_jun">Thu, 8 Jun</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="patient">Patient</string>
    <string name="clinic">Clinic</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="get_otp">Get OTP</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="i_accept_the_terms_and_conditions_booking">I accept the terms and conditions of booking</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_the_6_digit_code_sent_to_your_email">Enter the 6-digit code sent to your email</string>
    <string name="search_for_doctors_or_specialties">Search for doctors or specialties</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="terms_conditions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet ligula rutrum, dictum nisl a, aliquam felis. Aliquam nec nisi non urna fringilla varius. Etiam porta nulla sit amet diam fermentum pulvinar. Sed bibendum mauris in urna aliquet scelerisque et eu magna. Donec pellentesque a erat eget gravida. Phasellus id magna metus. Nunc pellentesque urna at facilisis egestas. Pellentesque volutpat eros sapien. Mauris imperdiet pellentesque tortor, vitae placerat lectus consectetur id.
Nulla vitae neque nisl. Aenean vel libero eget justo efficitur efficitur. Praesent placerat at mauris vitae porttitor. Nam vel volutpat nibh, et semper lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque diam ligula, tempor viverra tempor eu, cursus ut sapien. Cras egestas dolor in bibendum fringilla. Proin lorem est, varius id justo tristique, facilisis condimentum nunc. Etiam sed erat risus. In dictum sem neque, vel tincidunt ante tincidunt ut.
Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi consequat rutrum orci, vel congue magna finibus ac. Aenean faucibus risus nec mi ultricies, quis tincidunt lacus tempor. Etiam pellentesque tellus a sem hendrerit rutrum. Pellentesque id ligula nisl. Duis ex mi, blandit eget feugiat nec, tristique ac justo. Donec leo est, tincidunt eget blandit consequat, pharetra ut arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut dictum risus tellus, vel aliquam dolor laoreet sit amet. Praesent accumsan placerat elit id scelerisque. Cras vehicula semper nisl.
Suspendisse lacinia elit id nisi rhoncus, dignissim elementum est sodales. Mauris aliquet nisi est, at mollis lectus fringilla sit amet. Proin blandit laoreet sagittis. Quisque condimentum ex eget libero consequat, eget tincidunt nibh auctor. Donec sollicitudin massa semper, sodales erat sed, molestie sapien. Pellentesque venenatis, velit non semper pharetra, orci odio aliquam odio, nec cursus mauris ligula vitae enim. Aenean tempus semper justo, non pretium tellus.
Etiam interdum neque sit amet ante gravida, sit amet viverra lectus tincidunt. Etiam eu lacinia sem. Nulla facilisi. Vivamus at mollis massa. Vivamus pretium aliquam ornare. Nullam nec rutrum odio. Sed facilisis, massa sit amet volutpat maximus, quam mi eleifend lorem, sit amet bibendum enim eros in nulla. Nulla leo sapien, tincidunt dictum sem et, vestibulum faucibus eros. Nulla blandit in eros sit amet dignissim. Suspendisse fermentum venenatis sagittis.</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="back">Back</string>
    <string name="is_this_appointment_for_you_or_another_patient">Is this appointment for you or another patient?</string>
    <string name="for_myself">For Myself</string>
    <string name="for_another_patient">For Another Patient</string>
    <string name="your_details">Your Details:</string>
    <string name="note_for_the_doctor">Note for the doctor</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="review_your_bookin">Review Your Booking</string>
    <string name="doctor_s_details">Doctor\'s Details</string>
    <string name="doctor_name_mock">Dr. Bidya Balan, Orthopedic Specialist</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="mock_date">Thursday, 8th June</string>
    <string name="mock_time">11:30 AM</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_name_mock">Gabriela Pereira</string>
    <string name="phone_number_mock">1 (628) 267 - 9041</string>
    <string name="dob_mock">02/15/1995</string>
    <string name="age_mock">Age: 28</string>
    <string name="add_notes_mock">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sit amet ligula rutrum, dictum nisl a, aliquam felis. Aliquam nec nisi non urna fringilla varius. Etiam porta nulla sit amet diam fermentum pulvinar. Sed bibendum mauris in urna aliquet scelerisque et eu magna. Donec pellentesque a erat eget gravida. Phasellus id magna metus. Nunc pellentesque urna at facilisis egestas. Pellentesque volutpat eros sapien. Mauris imperdiet pellentesque tortor, vitae placerat lectus consectetur id.</string>
    <string name="remind_me">Remind me</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="re_book">Re-Book</string>
    <string name="add_review">Add Review</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="forms">Forms</string>
    <string name="appointments">Appointments</string>
    <string name="doctors">Doctors</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">profile picture</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="email_address">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="clinic_code">Clinic Code</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="upload_id">Upload Government Photo ID</string>
    <string name="submit">Submit</string>
    <string name="gender_label">Gender</string>
    <string name="no_file_selected">No file selected</string>
    <string name="review_question">How was your experience with the doctor?</string>
    <string name="add_detailed_review_text">Add detailed review</string>
    <string name="email_mock">gabriela@gmail.com</string>
    <string name="address_mock">123 Main St, Toronto</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="service_days">Service Days</string>
    <string name="service_hours">Service Hours</string>
    <string name="see_all_link">See all</string>
    <string name="form_title">Form Title</string>
    <string name="form_description_mock">Short description about the form to give the user context.</string>
    <string name="form_status_mock">Pending</string>
    <string name="edit">Edit</string>
    <string name="current_symptoms">Primary reason for your visit?</string>
    <string name="medication_taking">Are you currently taking any medications?</string>
    <string name="recent_symptoms">Have you experienced any of the following symptoms recently? (Select all that apply)</string>
    <string name="fever">Fever</string>
    <string name="cough">Cough</string>
    <string name="chest_pain">Chest pain</string>
    <string name="fatigue">Fatigue</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="headache">Headache</string>
    <string name="upcoming_appointments_text">You have an upcoming appointment, please confirm your attendance:</string>
    <string name="rsvp_no">I can\'t make it</string>
    <string name="rsvp_yes">I\'ll be there</string>
    <string name="pre_appointment_form_title">Pre-Appointment Form</string>
    <string name="chronic_condition">Do you have a history of any chronic conditions? (Select all that apply)</string>
    <string name="diabetes">Diabetes</string>
    <string name="hypertension">Hypertension</string>
    <string name="heart_disease">Heart disease</string>
    <string name="asthma">Asthma</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="surgery_question">Have you undergone any surgeries or major medical procedures in the past?</string>
    <string name="smoke_question">Do you smoke or use tobacco products?</string>
    <string name="alcohol_question">Do you consume alcohol?</string>
    <string name="family_history_disease">Do you have a family history of any significant medical conditions?</string>
    <string name="cancer">Cancer</string>
    <string name="notification_title_mock">Notification Title</string>
    <string name="time_notification_mock">2h ago</string>
    <string name="notification_body_mock">This is the notification body text. This is the notification body text. This is the notification body text.</string>
    <string name="read_text">Read</string>
    <string name="clear_text">Clear</string>
    <string name="stroke">Stroke</string>
    <string name="ok">OK</string>
    <string name="read_less_link">Read Less</string>
    <string name="no_appointments_to_display">No appointments to display</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="no_data_available">No data available</string>
    <string name="no_notifications_to_display">No notifications to display</string>
</resources>